--- a/src/main/resources/fxmls/StorageWindow.fxml
+++ b/src/main/resources/fxmls/StorageWindow.fxml
@@ -2,29 +2,28 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Rectangle?>
 
-<AnchorPane prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.polytech.controller.StorageWindowController">
+<AnchorPane prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.polytech.controller.StorageWindowController">
     <children>
-        <Button fx:id="plantButton" disable="true" layoutX="324.0" layoutY="412.0" mnemonicParsing="false" onAction="#handlePlanting" prefHeight="35.0" prefWidth="80.0" text="Посадить" />
-        <Button fx:id="sellButton" disable="true" layoutX="524.0" layoutY="412.0" mnemonicParsing="false" onAction="#handleSell" prefHeight="35.0" prefWidth="90.0" text="Продать" />
+        <Button fx:id="plantButton" disable="true" layoutX="284.0" layoutY="431.0" mnemonicParsing="false" onAction="#handlePlanting" prefHeight="50.0" prefWidth="118.0" text="Посадить" />
+        <Button fx:id="sellButton" disable="true" layoutX="546.0" layoutY="431.0" mnemonicParsing="false" onAction="#handleSell" prefHeight="50.0" prefWidth="126.0" text="Продать" />
         <Rectangle arcHeight="5.0" arcWidth="5.0" disable="true" fill="#ffecfc" height="130.0" layoutX="400.0" layoutY="120.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="5.0" width="169.0" />
         <ImageView fx:id="currentImage" fitHeight="121.0" fitWidth="160.0" layoutX="404.0" layoutY="125.0" pickOnBounds="true" preserveRatio="true" />
         <Label fx:id="currentSeedNameLabel" layoutX="430.0" layoutY="79.0" prefHeight="26.0" prefWidth="126.0" text="Ничего не выбрано..." />
         <Label fx:id="balanceLabel" layoutX="375.0" layoutY="15.0" prefHeight="26.0" prefWidth="80.0" text="Label" />
         <Label layoutX="313.0" layoutY="20.0" prefHeight="17.0" prefWidth="44.0" text="Баланс:" />
-        <Slider fx:id="numUnitsSelectedSlider" blockIncrement="1.0" disable="true" layoutX="360.0" layoutY="302.0" majorTickUnit="5.0" max="30.0" minorTickCount="4" onKeyReleased="#showNumUnitsSelected" onMouseReleased="#showNumUnitsSelected" prefHeight="38.0" prefWidth="259.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" />
-        <Label fx:id="totalProfitLabel" layoutX="569.0" layoutY="354.0" prefHeight="26.0" prefWidth="80.0" text="0" />
-        <Label layoutX="496.0" layoutY="359.0" prefHeight="17.0" prefWidth="56.0" text="На сумму:" />
-        <Label fx:id="numUnitsSelectedLabel" layoutX="357.0" layoutY="358.0" text="0" />
-        <Label layoutX="390.0" layoutY="359.0" text="шт." />
+        <Label fx:id="totalProfitLabel" layoutX="569.0" layoutY="384.0" prefHeight="26.0" prefWidth="80.0" text="0" />
+        <Label layoutX="496.0" layoutY="389.0" prefHeight="17.0" prefWidth="56.0" text="На сумму:" />
+        <Label fx:id="numUnitsSelectedLabel" layoutX="346.0" layoutY="388.0" prefHeight="17.0" prefWidth="18.0" text="0" />
+        <Label layoutX="390.0" layoutY="389.0" text="шт." />
         <TabPane layoutX="14.0" layoutY="14.0" prefHeight="490.0" prefWidth="259.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0">
             <tabs>
                 <Tab onSelectionChanged="#handleOpenSeedsPage" text="Семена">
@@ -59,5 +58,7 @@
                 </Tab>
             </tabs>
         </TabPane>
+      <TextField fx:id="numUnitsSelectedTextField" layoutX="334.0" layoutY="346.0" onAction="#showNumUnitsSelected" prefHeight="25.0" prefWidth="259.0" />
+      <Label layoutX="313.0" layoutY="308.0" prefHeight="25.0" prefWidth="321.0" text="Введите количество. Для подтверждениянажмите Enter." />
     </children>
 </AnchorPane>
